--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     
     <groupId>com.fantasi</groupId>
     <artifactId>xdnphb-github-xc-pom</artifactId>
-	<version>0.0.3</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
     <properties>
